--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ highlighter:      pygments
 permalink:        pretty
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:            Nessad Choudhury
+tagline:          'Infrastructure Engineer'
+description:      'A blog about my tech journey'
 url:              https://nessadc.com 
 baseurl:          /
 
@@ -22,7 +22,7 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/nessadc
 
 plugins:
   - jekyll-paginate
