--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      pygments
 permalink:        pretty
 
 # Setup
-title:            Nessad Choudhury
+title:            Nessad
 tagline:          'Infrastructure Engineer'
 description:      'A blog about my tech journey'
 url:              https://nessadc.com 
